BFAST -- History of visible changes.

Copyright (C) 2008, University of California - Los Angeles
See COPYING for copying conditions.

Please send bfast bug reports to nhomer@cs.ucla.edu

Version 0.2.6
* Fixed a bug in breport that caused memory leaks.
* Added support to output unpaired reads in bpostprocess.

Version 0.2.5
* bpairedenddist now outputs to a file instead of stdout.
* Added a new utility balignsim which tests the accuracy of 
various local alignment algorithms implemented by balign.
* Fixed bug in balign when considering indels for color space.

Version 0.2.4
* Added a .sh script to update the tests since the reference
genome files and index files have their version numbers embedded.
* Updated color space tests; there was a bug in reporting the 
reverse strand.
* Updated balign "Validatin outputID" message.
* Moved from using mktemp to mkstemp, which means no more mktemp
warnings.
* Added a new utility, bsort, which sorts a bfast reported file.
* Fixed off by two error for reverse strand in color space for 
bmatches.
* Fixed bug with paired end bmatches file as input to bevalsim.
* Fixed bug with calling insertions on the reverse strand.  The
offset was off by the two times the length of the insertion.

Version 0.2.3
* Updated bfix to include packed.
* Updated bug when reading a bfast reference genome file.
* Added "make check" functionality for regression testing.
* Fixed warning in Mac OS X complaining of unused argp structures.
* Fixed bug in Mac OS X where -r argument in bpostprocess caused
an error.
* Updated names of files generated by bmatches and balign.

Version 0.2.2
* Fixed major bug that was introduced in 0.1.10 where matches to 
the reverse strand were being erroneously included.
* Added check when making the indexes that the hash width is less 
than or equal to the key-size.

Version 0.2.1
* Major version change.
* Added option in balign to allow local alignment to only consider
mismatches and color errors.